# rag-pipeline

./: README.md  main.py  offline_rag.py  pyproject.toml
src/: offline_rag.py  splitting.py  utils.py
tests/: test_offline_rag.py
