[project]
name = "rag-pipeline"
version = "0.1.0"
description = "Trying to implement a simple RAG pipeline"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faiss-cpu>=1.12.0",
    "langchain-text-splitters>=0.3.11",
    "numpy>=2.3.2",
    "torch>=2.8.0",
    "tqdm>=4.67.1",
    "transformers>=4.56.0",
]

### -- Ruff -- ###

[tool.ruff]
line-length = 100
select = ["ALL"]
ignore = [
    "C901",
    "G004",
    "PLR0912",
    "PLR0913",
    "PLR0915",
    "PLW0603",
    "S311",
]

[tool.ruff.lint.pydocstyle]
convention = "google"
